Sqlline fixes; AM web ui enhancements